# No-10-DS-Hack

./: BRIEF.md  README.md  backend.py  clean_data.py  clean_data_apt.py  dataset_summaries.txt  enhanced_numerical_dataset_for_appointment_type.csv  enhanced_numerical_dataset_for_priority.csv  enhanced_numerical_dataset_for_professional_type.csv  gp_survey_data_analysis.py  index.html  model.py  model_apt.py  priority_label_mapping.json  priority_triage_model.joblib  professional_type_label_mapping.json  professional_type_triage_model.joblib  pyproject.toml  run.py  scratch.py
agent/: agent.py
assign_patients_to_clinic/: patients_assigned_clinics.csv  patients_to_clinic.py
assign_patients_to_clinic/data/: GP Clinics.csv  GP Request.csv  patients_nearest_pharmacy.csv  patients_plus_lat_long.csv
data/: Care Professional.csv  Co-morbidities.csv  GP Appointment.csv  GP Practices.csv  GP Registration.csv  GP Request.csv  ONS GP Survey Demographics.csv  ONS GP Survey.csv
datasets/: patients.csv  patients_nearest_pharmacies.csv  professional_training.csv
generated_datasets/: priority_training.csv
matcher/: match.py  rolling_average.py  rolling_average_ml.py
modelling/: patient.py  priority_prepare.py  priority_run.py  professional_prepare.py  professional_run.py  total_pipeline.py
pharmacy_route/: cancer_symptom_context.py  mock_route.py  patient.py  pharmacy.py
src/: App.tsx  vite-env.d.ts
src/components/: AIWidgetPlaceholder.tsx  AppSidebar.tsx  CallDetailsDialog.tsx  CallLogsTable.tsx  DemoScenarioSelector.tsx  EmergencyWarning.tsx  (+7 more)
supabase/: config.toml
(+8 files in other folders)
