[project]
name = "no10-ds-hack"
version = "0.1.0"
description = "Data Science Hackathon Project"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "streamlit>=1.25.0",
    "dash>=2.14.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.9",
    "xgboost>=2.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/no10_ds_hack"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
